// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`badge > renders correctly prominence default 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__14m2a200 styles_prominence_default__14m2a202 styles_sentiment_neutral__14m2a207 styles_size_medium__14m2a20e styles_undefined_compound_6__14m2a20n style__1yhcak80 style_prominence_default__1yhcak84 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a"
      style="--whiteSpace__1eu8od81: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly prominence strong 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__14m2a200 styles_prominence_strong__14m2a203 styles_sentiment_neutral__14m2a207 styles_size_medium__14m2a20e styles_undefined_compound_13__14m2a20u style__1yhcak80 style_prominence_default__1yhcak84 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a"
      style="--whiteSpace__1eu8od81: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment danger 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__14m2a200 styles_prominence_default__14m2a202 styles_sentiment_danger__14m2a205 styles_size_medium__14m2a20e styles_undefined_compound_2__14m2a20j style__1yhcak80 style_prominence_default__1yhcak84 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a"
      style="--whiteSpace__1eu8od81: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment info 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__14m2a200 styles_prominence_default__14m2a202 styles_sentiment_info__14m2a206 styles_size_medium__14m2a20e styles_undefined_compound_3__14m2a20k style__1yhcak80 style_prominence_default__1yhcak84 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a"
      style="--whiteSpace__1eu8od81: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__14m2a200 styles_prominence_default__14m2a202 styles_sentiment_neutral__14m2a207 styles_size_medium__14m2a20e styles_undefined_compound_6__14m2a20n style__1yhcak80 style_prominence_default__1yhcak84 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a"
      style="--whiteSpace__1eu8od81: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__14m2a200 styles_prominence_default__14m2a202 styles_sentiment_primary__14m2a208 styles_size_medium__14m2a20e styles_undefined_compound_0__14m2a20h style__1yhcak80 style_prominence_default__1yhcak84 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a"
      style="--whiteSpace__1eu8od81: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment secondary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__14m2a200 styles_prominence_default__14m2a202 styles_sentiment_secondary__14m2a209 styles_size_medium__14m2a20e styles_undefined_compound_1__14m2a20i style__1yhcak80 style_prominence_default__1yhcak84 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a"
      style="--whiteSpace__1eu8od81: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__14m2a200 styles_prominence_default__14m2a202 styles_sentiment_success__14m2a20a styles_size_medium__14m2a20e styles_undefined_compound_4__14m2a20l style__1yhcak80 style_prominence_default__1yhcak84 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a"
      style="--whiteSpace__1eu8od81: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment warning 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__14m2a200 styles_prominence_default__14m2a202 styles_sentiment_warning__14m2a20b styles_size_medium__14m2a20e styles_undefined_compound_5__14m2a20m style__1yhcak80 style_prominence_default__1yhcak84 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a"
      style="--whiteSpace__1eu8od81: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly size large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__14m2a200 styles_prominence_default__14m2a202 styles_sentiment_neutral__14m2a207 styles_size_large__14m2a20d styles_undefined_compound_6__14m2a20n style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a"
      style="--whiteSpace__1eu8od81: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly size medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__14m2a200 styles_prominence_default__14m2a202 styles_sentiment_neutral__14m2a207 styles_size_medium__14m2a20e styles_undefined_compound_6__14m2a20n style__1yhcak80 style_prominence_default__1yhcak84 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a"
      style="--whiteSpace__1eu8od81: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__14m2a200 styles_prominence_default__14m2a202 styles_sentiment_neutral__14m2a207 styles_size_small__14m2a20f styles_undefined_compound_6__14m2a20n style__1yhcak80 style_prominence_default__1yhcak84 style_variant_captionSmall__1yhcak8q style_undefined_compound_0__1yhcak81a"
      style="--whiteSpace__1eu8od81: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly size xsmall 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__14m2a200 styles_prominence_default__14m2a202 styles_sentiment_neutral__14m2a207 styles_size_xsmall__14m2a20g styles_undefined_compound_6__14m2a20n style__1yhcak80 style_prominence_default__1yhcak84 style_variant_captionSmall__1yhcak8q style_undefined_compound_0__1yhcak81a"
      style="--whiteSpace__1eu8od81: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly when disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__14m2a200 styles_disabled_true__14m2a201 styles_prominence_default__14m2a202 styles_sentiment_neutral__14m2a207 styles_size_medium__14m2a20e style__1yhcak80 style_prominence_weak__1yhcak87 style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d"
      style="--whiteSpace__1eu8od81: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__14m2a200 styles_prominence_default__14m2a202 styles_sentiment_neutral__14m2a207 styles_size_medium__14m2a20e styles_undefined_compound_6__14m2a20n style__1yhcak80 style_prominence_default__1yhcak84 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a"
      style="--whiteSpace__1eu8od81: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly with icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__14m2a200 styles_prominence_default__14m2a202 styles_sentiment_neutral__14m2a207 styles_size_medium__14m2a20e styles_undefined_compound_6__14m2a20n style__1yhcak80 style_prominence_default__1yhcak84 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a"
      style="--whiteSpace__1eu8od81: nowrap;"
    >
      <svg
        class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <title>
          InformationOutlineIcon
        </title>
        <path
          clip-rule="evenodd"
          d="M8 2.313a5.687 5.687 0 1 0 0 11.374A5.687 5.687 0 0 0 8 2.313M1 8a7 7 0 1 1 14 0A7 7 0 0 1 1 8m6.344-2.643c0-.363.294-.656.656-.656h.005c.363 0 .657.293.657.656v.005a.656.656 0 0 1-.657.656H8a.656.656 0 0 1-.656-.656zm.213 2.765a.657.657 0 0 1-.38-1.238l.03-.014c.906-.453 1.925.365 1.68 1.347l-.444 1.775a.657.657 0 0 1 .38 1.238l-.03.015c-.906.453-1.925-.365-1.68-1.347z"
          fill-rule="evenodd"
        />
      </svg>
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;
